#   $Id$

lib_LTLIBRARIES = libtlacotes.la

libtlacotes_la_CFLAGS = -Wall \
    -I $(top_srcdir)/src/tl \
    -I $(top_srcdir)/src/frontend \
    -I $(top_srcdir)/src/driver \
    -I $(top_srcdir)/lib \
    -I $(top_builddir)/src/tl \
    -I $(top_builddir)/src/frontend \
    -I $(top_builddir)/src/driver \
    -I $(top_builddir)/lib

libtlacotes_la_CXXFLAGS = -Wall \
    -I $(top_srcdir)/src/tl \
    -I $(top_srcdir)/src/frontend \
    -I $(top_srcdir)/src/driver \
    -I $(top_srcdir)/lib \
    -I $(top_builddir)/src/tl \
    -I $(top_builddir)/src/frontend \
    -I $(top_builddir)/src/driver \
    -I $(top_builddir)/lib

libtlacotes_la_SOURCES = \
    ac-finalizer.cc \
    ac-finalizer.h \
    ac-initializer.cc \
    ac-initializer.h \
    ac-port.cc \
    ac-port.h \
    ac-portconnection.cc \
    ac-portconnection.h \
    ac-sharedcheck.cc \
    ac-sharedcheck.h \
    ac-sharedupdate.cc \
    ac-sharedupdate.h \
    ac-state.cc \
    ac-state.h \
    ac-task.cc \
    ac-task.h \
    ac-taskgroup.cc \
    ac-taskgroup.h \
    ac-userport.cc \
    ac-userport.h \
    ac-variable.cc \
    ac-variable.h \
    tl-acotescompilerphase.cc \
    tl-acotescompilerphase.h \
    tl-acoteslogger.cc \
    tl-acoteslogger.h \
    tl-acotesstack.cc \
    tl-acotesstack.h \
    tl-acotestransform.cc \
    tl-acotestransform.h \
    tl-finalizerconstruct.cc \
    tl-finalizerconstruct.h \
    tl-finalizertransform.cc \
    tl-finalizertransform.h \
    tl-initializerconstruct.cc \
    tl-initializerconstruct.h \
    tl-initializertransform.cc \
    tl-initializertransform.h \
    tl-portconnectiontransform.cc \
    tl-portconnectiontransform.h \
    tl-porttransform.cc \
    tl-porttransform.h \
    tl-sharedconstruct.cc \
    tl-sharedconstruct.h \
    tl-sharedtransform.cc \
    tl-sharedtransform.h \
    tl-statetransform.cc \
    tl-statetransform.h \
    tl-taskconstruct.cc \
    tl-taskconstruct.h \
    tl-taskgroupconstruct.cc \
    tl-taskgroupconstruct.h \
    tl-taskgrouptransform.cc \
    tl-taskgrouptransform.h \
    tl-tasktransform.cc \
    tl-tasktransform.h \
    tl-userportconstruct.cc \
    tl-userportconstruct.h \
    tl-userporttransform.cc \
    tl-userporttransform.h \
    tl-variableclause.cc \
    tl-variableclause.h \
    tl-variabletransform.cc \
    tl-variabletransform.h