lib_LTLIBRARIES = libtlinstr.la

libtlinstr_la_CFLAGS = -Wall \
    -I $(srcdir)/../../../src \
    -I $(srcdir)/../../../lib \
    -I $(srcdir)/../../../src/tl \
    -I ../../../src \
    -I ../../../src/tl \
    -I ../../../lib 

libtlinstr_la_CXXFLAGS = -Wall \
    -I $(srcdir)/../../../src \
    -I $(srcdir)/../../../lib \
    -I $(srcdir)/../../../src/tl \
    -I ../../../src \
    -I ../../../src/tl \
    -I ../../../lib

libtlinstr_la_SOURCES = \
						tl-instrumentfilter.hpp \
						tl-instrumentfilter.cpp \
						tl-instrumentcalls.hpp \
						tl-instrumentcalls.cpp \
						tl-instrumentation.hpp \
						tl-instrumentation.cpp
