lib_LTLIBRARIES = libtlmypragma.la

libtlmypragma_la_CFLAGS = -Wall \
    -I $(srcdir)/../../../src \
    -I $(srcdir)/../../../lib \
    -I $(srcdir)/../../../src/tl \
    -I ../../../src \
    -I ../../../src/tl \
    -I ../../../lib 

libtlmypragma_la_CXXFLAGS = -Wall \
    -I $(srcdir)/../../../src \
    -I $(srcdir)/../../../lib \
    -I $(srcdir)/../../../src/tl \
    -I ../../../src \
    -I ../../../src/tl \
    -I ../../../lib

libtlmypragma_la_SOURCES = \
						tl-mypragma.hpp \
						tl-mypragma.cpp
