include ../Makefile.phases

lib_LTLIBRARIES = libtlnanos4.la

libtlnanos4_la_CFLAGS = -Wall $(tl_cflags)

libtlnanos4_la_CXXFLAGS = -Wall $(tl_cflags)

END=

libtlnanos4_la_LDFLAGS = $(tl_ldflags)
libtlnanos4_la_LIBADD = $(tl_libadd)

libtlnanos4_la_SOURCES = \
	tl-nanos.hpp \
	tl-nanos.cpp \
	$(END)
